--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,6 +33,8 @@ lint_and_test:
 pages:
   stage: doc
   before_script:
+    - apt-get update
+    - apt-get install -y libasound2-dev libudev-dev libxcb-shape0-dev libxcb-xfixes0-dev
     - export CARGO_HOME="$CI_PROJECT_DIR/cargo"
     - rm rust-toolchain .cargo/config.toml
   script:
