Resolve "Better group items in construction menu"

--- a/assets/buildings/quarry.yml
+++ b/assets/buildings/quarry.yml
@@ -3,15 +3,18 @@
   tile: 5
   products:
     - resource: coal
+  group: Metallurgy
 
 "quarry.iron_ore":
   name: Iron Ore Quarry
   tile: 6
   products:
     - resource: iron_ore
+  group: Metallurgy
 
 "quarry.limestone":
   name: Limestone Quarry
   tile: 7
   products:
     - resource: limestone
+  group: Metallurgy
