--- a/assets/resources/agriculture.yml
+++ b/assets/resources/agriculture.yml
@@ -2,33 +2,54 @@
   name: Eggs
   storage_tile: 36
   group: Agriculture
+  car_tile:
+    horizontal: 114
+    vertical: 84
 
 "chicken":
   name: Chicken
   storage_tile: 38
   group: Agriculture
+  car_tile:
+    horizontal: 114
+    vertical: 84
 
 "pork":
   name: Pork
   storage_tile: 34
   group: Agriculture
+  car_tile:
+    horizontal: 115
+    vertical: 116
 
 "poultry":
   name: Poultry
   storage_tile: 35
   group: Agriculture
+  car_tile:
+    horizontal: 114
+    vertical: 84
 
 "hogs":
   name: Hogs
   storage_tile: 37
   group: Agriculture
+  car_tile:
+    horizontal: 115
+    vertical: 116
 
 "sunflower.seeds":
   name: Sunflower Seeds
   storage_tile: 39
   group: Agriculture
+  car_tile:
+    horizontal: 82
+    vertical: 85
 
 "sunflower.oil":
   name: Sunflower Oil
   storage_tile: 33
   group: Agriculture
+  car_tile:
+    horizontal: 82
+    vertical: 85
