Resolve "Add different rates to buildings, which are `f64` based"

--- a/assets/buildings/coke_furnace.yml
+++ b/assets/buildings/coke_furnace.yml
@@ -3,6 +3,8 @@
   tile: 9
   products:
     - resource: coke
+      rate: 1
       requisites:
-        - coal
+        - resource: coal
+          rate: 1.5
   group: Metallurgy
