--- a/assets/buildings/pig_farm.yml
+++ b/assets/buildings/pig_farm.yml
@@ -3,6 +3,7 @@
   tile: 24
   products:
     - resource: hogs
+      rate: 0.5
       # requisites:
       # - sunflower.seeds
   group: Agriculture
