--- a/assets/buildings/quarry.yml
+++ b/assets/buildings/quarry.yml
@@ -3,6 +3,7 @@
   tile: 5
   products:
     - resource: coal
+      rate: 1
   group: Metallurgy
 
 "quarry.iron_ore":
@@ -10,6 +11,7 @@
   tile: 6
   products:
     - resource: iron_ore
+      rate: 1
   group: Metallurgy
 
 "quarry.limestone":
@@ -17,4 +19,5 @@
   tile: 7
   products:
     - resource: limestone
+      rate: 1
   group: Metallurgy
