--- a/assets/resources/agriculture.yml
+++ b/assets/resources/agriculture.yml
@@ -9,7 +9,7 @@
 "chicken":
   name: Chicken
   storage_tile: 38
-  group: Agriculture
+  group: Meat
   car_tile:
     horizontal: 114
     vertical: 84
@@ -17,7 +17,7 @@
 "pork":
   name: Pork
   storage_tile: 34
-  group: Agriculture
+  group: Meat
   car_tile:
     horizontal: 115
     vertical: 116
@@ -25,7 +25,7 @@
 "poultry":
   name: Poultry
   storage_tile: 35
-  group: Agriculture
+  group: Meat
   car_tile:
     horizontal: 114
     vertical: 84
@@ -33,7 +33,7 @@
 "hogs":
   name: Hogs
   storage_tile: 37
-  group: Agriculture
+  group: Meat
   car_tile:
     horizontal: 115
     vertical: 116
