--- a/assets/buildings/dairy_farm.yml
+++ b/assets/buildings/dairy_farm.yml
@@ -7,4 +7,8 @@
       byproducts:
         - resource: cows
           rate: 0.05
+      enhancers:
+        - resource: animal_feed
+          rate: 0.1
+          multiplier: 2.0
   group: Dairy
