--- a/assets/buildings/poultry_farm.yml
+++ b/assets/buildings/poultry_farm.yml
@@ -4,8 +4,15 @@
   products:
     - resource: eggs
       rate: 0.2
-      # requisites:
-      # - sunflower.seeds
+      enhancers:
+        - resource: animal_feed
+          rate: 0.1
+          multiplier: 2.0
+
     - resource: chicken
       rate: 0.6
+      enhancers:
+        - resource: animal_feed
+          rate: 0.1
+          multiplier: 2.0
   group: Meat
