--- a/assets/buildings/pig_farm.yml
+++ b/assets/buildings/pig_farm.yml
@@ -7,5 +7,5 @@
       enhancers:
         - resource: animal_feed
           rate: 0.1
-          multiplier: 2.0
+          modifier: 2.0
   group: Meat
