--- a/assets/buildings/poultry_farm.yml
+++ b/assets/buildings/poultry_farm.yml
@@ -7,12 +7,12 @@
       enhancers:
         - resource: animal_feed
           rate: 0.1
-          multiplier: 2.0
+          modifier: 2.0
 
     - resource: chicken
       rate: 0.6
       enhancers:
         - resource: animal_feed
           rate: 0.1
-          multiplier: 2.0
+          modifier: 2.0
   group: Meat
