--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,6 @@ num-derive = "0.3"
 bevy_egui = "0.6"
 serde = "1.0"
 serde_yaml = "0.8"
-hierarchical_pathfinding = { git = "https://github.com/mich101mich/hierarchical_pathfinding.git" }
+hierarchical_pathfinding = "0.4"
 glob = "0.3"
 collecting-hashmap = "0.2"
