--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "oligarchy"
-version = "0.1.3"
+version = "0.1.4-dev"
 authors = ["Patrick Lerner <ptlerner@gmail.com>"]
 edition = "2018"
 license = "LicenseRef-Oligarchy"
