--- a/assets/buildings/pig_farm.yml
+++ b/assets/buildings/pig_farm.yml
@@ -6,6 +6,12 @@
       rate: 0.5
       enhancers:
         - resource: animal_feed
-          rate: 1.0
+          rate: 1.2
           modifier: 2.0
   group: Meat
+  cost:
+    resources:
+      steel.blooms: 15
+      steel.slabs: 30
+      steel.billets: 15
+    base: 1000
