--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,5 @@ hierarchical_pathfinding = "0.4"
 glob = "0.3"
 collecting-hashmap = "0.2"
 num-format = "0.4"
+directories-next = "2.0"
+uuid = { version = "0.8", features = ["v4"] }
