--- a/assets/buildings/pig_farm.yml
+++ b/assets/buildings/pig_farm.yml
@@ -8,6 +8,9 @@
         - resource: animal_feed
           rate: 1.2
           modifier: 2.0
+      byproducts:
+        - resource: manure
+          rate: 0.075
   group: Meat
   cost:
     resources:
