--- a/assets/buildings/dairy_farm.yml
+++ b/assets/buildings/dairy_farm.yml
@@ -7,6 +7,9 @@
       byproducts:
         - resource: cows
           rate: 0.08
+
+        - resource: manure
+          rate: 0.1
       enhancers:
         - resource: animal_feed
           rate: 1.25
