--- a/assets/buildings/quarry.yml
+++ b/assets/buildings/quarry.yml
@@ -39,3 +39,31 @@
       steel.slabs: 5
       steel.billets: 25
     base: 5000
+
+"quarry.phosphor":
+  name: Phosphor Quarry
+  tile: 83
+  products:
+    - resource: phosphor
+      rate: 1
+  group: Chemical
+  cost:
+    resources:
+      steel.blooms: 25
+      steel.slabs: 5
+      steel.billets: 25
+    base: 5000
+
+"quarry.sulfur":
+  name: Sulfur Quarry
+  tile: 84
+  products:
+    - resource: sulfur
+      rate: 1
+  group: Chemical
+  cost:
+    resources:
+      steel.blooms: 25
+      steel.slabs: 5
+      steel.billets: 25
+    base: 5000
