#84 add basics for water and forrests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ collecting-hashmap = "0.2"
 num-format = "0.4"
 directories-next = "2.0"
 uuid = { version = "0.8", features = ["v4"] }
+noise = "0.7"
