--- a/assets/resources/metallurgy.yml
+++ b/assets/resources/metallurgy.yml
@@ -61,6 +61,15 @@
     vertical: 116
   cost: 90
 
+"coal.ore":
+  name: Coal Ore
+  storage_tile: 96
+  group: Metallurgy
+  car_tile:
+    horizontal: 83
+    vertical: 117
+  cost: 7
+
 "coal":
   name: Coal
   storage_tile: 16
@@ -68,7 +77,7 @@
   car_tile:
     horizontal: 83
     vertical: 117
-  cost: 9
+  cost: 8
 
 "coke":
   name: Coke
