--- a/assets/buildings/field.yml
+++ b/assets/buildings/field.yml
@@ -22,6 +22,13 @@
         - resource: fertilizer
           rate: 0.15
           modifier: 3.0
+
+    - resource: hops
+      rate: 0.75
+      enhancers:
+        - resource: fertilizer
+          rate: 0.15
+          modifier: 3.0
   group: Agriculture
   cost:
     base: 1500
