--- a/assets/resources/agriculture.yml
+++ b/assets/resources/agriculture.yml
@@ -98,3 +98,48 @@
     horizontal: 253
     vertical: 221
   cost: 5
+
+"flour":
+  name: Flour
+  storage_tile: 108
+  group: Agriculture
+  car_tile:
+    horizontal: 347
+    vertical: 379
+  cost: 8
+
+"bread":
+  name: Bread
+  storage_tile: 92
+  group: Agriculture
+  car_tile:
+    horizontal: 346
+    vertical: 378
+  cost: 23
+
+"pastry":
+  name: Pastry
+  storage_tile: 107
+  group: Agriculture
+  car_tile:
+    horizontal: 346
+    vertical: 378
+  cost: 25
+
+"sugar_beet":
+  name: Sugar Beet
+  storage_tile: 90
+  group: Agriculture
+  car_tile:
+    horizontal: 253
+    vertical: 221
+  cost: 3
+
+"sugar":
+  name: Sugar
+  storage_tile: 106
+  group: Agriculture
+  car_tile:
+    horizontal: 253
+    vertical: 221
+  cost: 8
