--- a/assets/goals/breadbasket.yml
+++ b/assets/goals/breadbasket.yml
@@ -1,6 +1,12 @@
 - name: Breadbasket
   goals:
-    - resource: wheat
+    - resource: bread
+      amount:
+        small: 1000
+        medium: 3000
+        large: 5000
+
+    - resource: pastry
       amount:
         small: 1000
         medium: 3000
