--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "oligarchy"
 version = "0.1.7-dev"
-authors = ["Patrick Lerner <ptlerner@gmail.com>"]
+authors = ["Izhevskoye <izhevskoye@example.com>"]
 edition = "2018"
 license = "LicenseRef-Oligarchy"
 
