--- a/assets/buildings/winery.yml
+++ b/assets/buildings/winery.yml
@@ -9,7 +9,7 @@
         - resource: grapes
           rate: 6
 
-  group: Alcohol
+  group: Beverages
   cost:
     resources:
       steel.blooms: 4
