--- a/assets/buildings/bakery.yml
+++ b/assets/buildings/bakery.yml
@@ -22,7 +22,7 @@
         - resource: sugar
           rate: 0.5
 
-  group: Agriculture
+  group: Food
   cost:
     resources:
       steel.blooms: 10
