--- a/assets/goals/soda_and_sweets.yml
+++ b/assets/goals/soda_and_sweets.yml
@@ -5,3 +5,9 @@
         small: 1000
         medium: 3000
         large: 5000
+
+    - resource: confections
+      amount:
+        small: 1000
+        medium: 3000
+        large: 5000
